# aprilparticle

./: Info.plist  TODO.txt  fileproperties.rc  libaprilparticle.project  libaprilparticle.sln  libaprilparticle.tags  libaprilparticle.vcproj  libaprilparticle.vcxproj  libaprilparticle.vcxproj.filters  libaprilparticle.workspace  libaprilparticle.workspace.session  libaprilparticle_2008.sln  libaprilparticle_2010.sln  libaprilparticle_2012.sln  libaprilparticle_WinRT.sln  libaprilparticle_WinRT.vcxproj  libaprilparticle_WinRT.vcxproj.filters  libaprilparticle_vs2012-winrt.sln  libaprilparticle_vs2012.sln  libaprilparticle_vs2013-winp8.sln  libaprilparticle_vs2013-winrt.sln  libaprilparticle_vs2013.sln  libaprilparticle_vs2015-uwp.sln  libaprilparticle_vs2015.sln
android-studio/demos/: settings.gradle
android-studio/demos/demo_aprilui/: CMakeLists.txt  build.gradle
android-studio/demos/demo_aprilui/src/main/: AndroidManifest.xml
android-studio/demos/demo_aprilui/src/main/java/com/aprilparticle/demoAprilui/: Main.java
android-studio/lib/: CMakeLists.txt  build.gradle
android-studio/lib/src/main/: AndroidManifest.xml
aprilparticle.xcodeproj/: project.pbxproj
apriluiparticle/: Info.plist  fileproperties.rc  libapriluiparticle.project  libapriluiparticle.vcproj  libapriluiparticle.vcxproj  libapriluiparticle.vcxproj.filters  libapriluiparticle_WinRT.vcxproj  libapriluiparticle_WinRT.vcxproj.filters
apriluiparticle/android-studio/lib/: CMakeLists.txt
apriluiparticle/android-studio/lib/src/main/: AndroidManifest.xml
apriluiparticle/apriluiparticle.xcodeproj/: project.pbxproj
apriluiparticle/libapriluiparticle.xcodeproj/: project.pbxproj
apriluiparticle/props/: v110-winrt.default.props  v110.configuration.props  v110.default.props
apriluiparticle/src/: Base.cpp  Emitter.cpp  Event.cpp  Particle.cpp  ParticleAffector.cpp  ParticleBase.cpp  ParticleEmitter.cpp  ParticleSpace.cpp  ParticleSpaceBase.cpp  ParticleSystem.cpp  Space.cpp  System.cpp  apriluiparticle.cpp  apriluiparticleUtil.cpp  apriluiparticleUtil.h
demos/: main.cpp  particledemo.cpp  particledemo.project  simpledemo.cpp  simpledemo.mk  simpledemo.project
demos/demo_aprilui/: Package-uwp.appxmanifest  Package-vs2012.appxmanifest  Package-winp8.appxmanifest  Package.appxmanifest  TemporaryKey.pfx  WMAppManifest.xml  demo_aprilui.cpp  demo_aprilui.project  demo_aprilui.vcproj  demo_aprilui.vcxproj  demo_aprilui.vcxproj.filters  demo_aprilui_WinRT.vcxproj  demo_aprilui_WinRT.vcxproj.filters
demos/demo_particle/: Package-uwp.appxmanifest  Package-vs2012.appxmanifest  Package-winp8.appxmanifest  Package.appxmanifest  WMAppManifest.xml  demo_particle.cpp  demo_particle.project  demo_particle.vcproj  demo_particle.vcxproj  demo_particle.vcxproj.filters  demo_particle_WinRT.vcxproj  demo_particle_WinRT.vcxproj.filters
demos/demo_simple/: Package-uwp.appxmanifest  Package-vs2012.appxmanifest  Package-winp8.appxmanifest  Package.appxmanifest  WMAppManifest.xml  demo_simple.cpp  demo_simple.project  demo_simple.vcproj  demo_simple.vcxproj  demo_simple.vcxproj.filters  demo_simple_WinRT.vcxproj  demo_simple_WinRT.vcxproj.filters
demos/media/: bubbles.particle  demo_aprilui.datadef  (+13 more)
libaprilparticle.xcodeproj/: project.pbxproj
props/: v110-winrt.configuration.props  v110-winrt.default.props  v110.configuration.props  v110.default.props
src/: ActiveObject.cpp  Affector.cpp  AffectorContainer.cpp  Attractor.cpp  BaseAffector.cpp  BaseParticle.cpp  BillboardParticle.cpp  ColorAffector.cpp  CompositeParticleObject.cpp  DirectionalForceField.cpp  Emitter.cpp  Exception.cpp  LinearDirectionalForce.cpp  MeshParticle.cpp  MultiColorAffector.cpp  Particle.cpp  ParticleEmitter.cpp  ParticleSystem.cpp  PropertyDescription.cpp  Rotator.cpp  Space.cpp  Space3DObject.cpp  SpaceObject.cpp  Swirl.cpp  System.cpp  Texture.cpp  TimedTemplate.h  Util.cpp  Util.h  aprilparticle.cpp  aprilparticleUtil.cpp  aprilparticleUtil.h  xmlHelper.cpp
(+213 files in other folders)
